# baddcoin

./: .appveyor.yml  .fuzzbuzz.yml  .gitignore  .gitignore.baddcoin  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libbaddcoinconsensus.pc.in
.tx/: config
build_msvc/: .gitignore  README.md  baddcoin.sln  baddcoin_config.h  libsecp256k1_config.h  msvc-autogen.py
contrib/: README.md  baddcoin-cli.bash-completion  baddcoin-qt.pro  baddcoin-tx.bash-completion  baddcoind.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  baddcoin-conf.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  baddcoin-cli.1  baddcoin-qt.1  baddcoin-tx.1  baddcoin-wallet.1  baddcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  addrdb.h  addrman.h  (+105 more)
(+718 files in other folders)
