dist_man1_MANS=

if BUILD_BADDCOIND
  dist_man1_MANS+=baddcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=baddcoin-qt.1
endif

if BUILD_BADDCOIN_CLI
  dist_man1_MANS+=baddcoin-cli.1
endif

if BUILD_BADDCOIN_TX
  dist_man1_MANS+=baddcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BADDCOIN_WALLET
  dist_man1_MANS+=baddcoin-wallet.1
endif
endif
